--- a/index.html
+++ b/index.html
@@ -564,13 +564,13 @@
         <div class="stage" id="stage3">
             <div class="layers-container" id="layersContainer">
                 <div class="layer" data-layer="2" style="transform: translate(10px, 20px);">
-                    <div class="layer-text">her gün</div>
+                    <div class="layer-text">her sabah</div>
                 </div>
                 <div class="layer" data-layer="1" style="transform: translate(5px, 10px);">
-                    <div class="layer-text">seni düşünüyorum</div>
+                    <div class="layer-text">senin için</div>
                 </div>
                 <div class="layer" data-layer="0">
-                    <div class="layer-text">sen çok özelsin</div>
+                    <div class="layer-text">sadece bugün değil</div>
                 </div>
             </div>
             <div class="hint">katmanları herhangi yöne kaydır</div>
@@ -589,8 +589,7 @@
                     <span class="heart">❤️</span>
                     Günaydınnnn Ayşe
                 </div>
-                <div class="subtitle">sana özel hazırlandı</div>
-                <div class="love-note">Her sabah senin yanında olmayı hayal ediyorum ✨</div>
+                <div class="subtitle">senin için hazırlandı</div>
             </div>
         </div>
     </div>
