--- a/index.html
+++ b/index.html
@@ -589,7 +589,7 @@
                     <span class="heart">❤️</span>
                     Günaydınnnn Ayşe
                 </div>
-                <div class="subtitle">senin için hazırlandı</div>
+                <div class="subtitle">bu site sadece senin için hazırlandı</div>
             </div>
         </div>
     </div>
