--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <meta name="color-scheme" content="light only">
     <title>...</title>
     <style>
         * {
@@ -10,6 +11,11 @@
             padding: 0;
             box-sizing: border-box;
             -webkit-tap-highlight-color: transparent;
+        }
+
+        html {
+            color-scheme: light only;
+            -webkit-font-smoothing: antialiased;
         }
 
         body {
@@ -23,7 +29,8 @@
             justify-content: center;
             overflow: hidden;
             position: relative;
-            color-scheme: light;
+            color-scheme: light only;
+            -webkit-text-size-adjust: 100%;
         }
 
         @keyframes gradientShift {
@@ -164,12 +171,12 @@
             position: absolute;
             width: 2px;
             height: 2px;
-            background: #ffffff !important;
-            background-color: #ffffff !important;
+            background: #fff !important;
+            background-color: #fff !important;
             border-radius: 50%;
-            box-shadow: 0 0 4px #ffffff, 0 0 6px rgba(255,255,255,0.6);
+            box-shadow: 0 0 4px #fff, 0 0 6px rgba(255,255,255,0.6);
             animation: twinkle 2s ease-in-out infinite;
-            filter: brightness(2);
+            will-change: opacity, transform;
         }
 
         .clouds {
@@ -202,12 +209,20 @@
         }
 
         @keyframes floatCloud {
-            from { transform: translateX(-100px); }
-            to { transform: translateX(calc(100% + 500px)); }
+            from { transform: translate3d(-100px, 0, 0); }
+            to { transform: translate3d(calc(100% + 500px), 0, 0); }
+        }
+
+        @media (prefers-reduced-motion: reduce) {
+            *, *::before, *::after {
+                animation-duration: 0.01ms !important;
+                animation-iteration-count: 1 !important;
+                transition-duration: 0.01ms !important;
+            }
         }
 
         .hint {
-            color: rgba(255,255,255,0.9);
+            color: rgba(255,255,255,0.9) !important;
             font-size: 15px;
             letter-spacing: 1px;
             transition: all 0.3s ease;
@@ -239,12 +254,13 @@
             position: absolute;
             width: 18px;
             height: 18px;
-            background: rgba(255,255,255,0.6);
-            border: 2px solid rgba(255,255,255,0.9);
+            background: rgba(255,255,255,0.6) !important;
+            border: 2px solid rgba(255,255,255,0.9) !important;
             border-radius: 50%;
             cursor: pointer;
-            transition: all 0.3s ease;
+            transition: all 0.2s ease;
             z-index: 10;
+            will-change: transform;
         }
 
         .heart-dot:hover {
@@ -253,16 +269,16 @@
         }
 
         .heart-dot.active {
-            background: #ff6b9d;
-            border-color: #ff6b9d;
-            box-shadow: 0 0 15px rgba(255,107,157,0.8);
+            background: #ff6b9d !important;
+            border-color: #ff6b9d !important;
+            box-shadow: 0 0 15px rgba(255,107,157,0.8) !important;
             transform: scale(1.3);
         }
 
         .heart-dot.completed {
-            background: #ff1744;
-            border-color: #ff1744;
-            box-shadow: 0 0 20px rgba(255,23,68,0.9);
+            background: #ff1744 !important;
+            border-color: #ff1744 !important;
+            box-shadow: 0 0 20px rgba(255,23,68,0.9) !important;
         }
 
         .heart-path {
@@ -338,7 +354,7 @@
 
         .layer-text {
             font-size: 26px;
-            color: #fff;
+            color: #fff !important;
             font-weight: 300;
             letter-spacing: 2px;
             text-shadow: 0 2px 20px rgba(0,0,0,0.3);
@@ -383,7 +399,7 @@
         .reveal-text {
             font-size: 52px;
             font-weight: 600;
-            color: #fff;
+            color: #fff !important;
             letter-spacing: 4px;
             margin-bottom: 24px;
             animation: fadeInUp 0.8s ease;
@@ -459,7 +475,7 @@
 
         .subtitle {
             font-size: 18px;
-            color: rgba(255,255,255,0.95);
+            color: rgba(255,255,255,0.95) !important;
             font-weight: 300;
             letter-spacing: 2px;
             animation: fadeInUp 0.8s ease 0.2s backwards;
@@ -506,12 +522,12 @@
             position: absolute;
             width: 2px;
             height: 2px;
-            background: #ffffff !important;
-            background-color: #ffffff !important;
+            background: #fff !important;
+            background-color: #fff !important;
             border-radius: 50%;
             animation: twinkle 3s ease-in-out infinite;
-            box-shadow: 0 0 3px #ffffff, 0 0 5px rgba(255,255,255,0.5);
-            filter: brightness(2);
+            box-shadow: 0 0 3px #fff, 0 0 5px rgba(255,255,255,0.5);
+            will-change: opacity, transform;
         }
 
         @keyframes twinkle {
@@ -523,13 +539,13 @@
             position: absolute;
             width: 4px;
             height: 4px;
-            background: #ffffff !important;
-            background-color: #ffffff !important;
+            background: #fff !important;
+            background-color: #fff !important;
             border-radius: 50%;
             pointer-events: none;
             animation: float 4s ease-in-out infinite;
-            box-shadow: 0 0 2px #ffffff;
-            filter: brightness(2);
+            box-shadow: 0 0 2px #fff;
+            will-change: transform;
         }
 
         @keyframes float {
@@ -692,33 +708,40 @@
             audioUnlocked = true;
         }
         
-        for (let i = 0; i < 60; i++) {
+        const isMobile = /Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navigator.userAgent);
+        const starCount = isMobile ? 25 : 50;
+        const particleCount = isMobile ? 10 : 20;
+        const nightStarCount = isMobile ? 15 : 30;
+
+        for (let i = 0; i < starCount; i++) {
             const star = document.createElement('div');
             star.className = 'star';
             star.style.left = Math.random() * 100 + '%';
             star.style.top = Math.random() * 100 + '%';
             star.style.animationDelay = Math.random() * 3 + 's';
+            star.style.backgroundColor = '#fff';
             document.getElementById('stars').appendChild(star);
         }
 
-        for (let i = 0; i < 20; i++) {
+        for (let i = 0; i < particleCount; i++) {
             const particle = document.createElement('div');
             particle.className = 'particle';
             particle.style.left = Math.random() * 100 + '%';
             particle.style.top = Math.random() * 100 + '%';
             particle.style.animationDelay = Math.random() * 4 + 's';
             particle.style.animationDuration = (3 + Math.random() * 3) + 's';
-            particle.style.backgroundColor = '#ffffff';
+            particle.style.backgroundColor = '#fff';
             document.getElementById('stars').appendChild(particle);
         }
 
         const starsNight = document.getElementById('starsNight');
-        for (let i = 0; i < 30; i++) {
+        for (let i = 0; i < nightStarCount; i++) {
             const star = document.createElement('div');
             star.className = 'star-small';
             star.style.left = Math.random() * 100 + '%';
             star.style.top = Math.random() * 70 + '%';
             star.style.animationDelay = Math.random() * 2 + 's';
+            star.style.backgroundColor = '#fff';
             starsNight.appendChild(star);
         }
 
