--- a/index.html
+++ b/index.html
@@ -592,6 +592,7 @@
 
         .heart-fill-path {
             transition: opacity 0.3s ease;
+            fill: #ff1744;
         }
 
         @keyframes heartbeat {
@@ -603,17 +604,19 @@
         }
 
         @keyframes heartBeatComplete {
-            0% { transform: scale(0.8); opacity: 0; }
-            20% { transform: scale(1.1); opacity: 1; }
-            40% { transform: scale(0.95); }
-            60% { transform: scale(1.05); }
-            80% { transform: scale(0.98); }
-            100% { transform: scale(1); opacity: 1; }
+            0% { transform: scale(0.8); opacity: 0; fill: #ff1744; }
+            20% { transform: scale(1.1); opacity: 1; fill: #ff1744; }
+            40% { transform: scale(0.95); fill: #ff1744; }
+            60% { transform: scale(1.05); fill: #ff1744; }
+            80% { transform: scale(0.98); fill: #ff1744; }
+            100% { transform: scale(1); opacity: 1; fill: #ff1744; }
         }
 
         .heart-fill-path.beating {
             animation: heartbeat 1.2s ease-in-out 3, heartBeatComplete 0.8s ease-out forwards;
             transform-origin: center;
+            fill: #ff1744 !important;
+            opacity: 1 !important;
         }
 
 
@@ -766,7 +769,7 @@
             position: absolute;
             font-size: 28px;
             animation: floatHeart 2s ease-in-out infinite;
-            opacity: 0;
+            opacity: 1;
             filter: drop-shadow(0 2px 8px rgba(255,0,0,0.3));
         }
 
@@ -1401,6 +1404,11 @@
                     heartPath.setAttribute('opacity', '0');
                     heartFill.setAttribute('opacity', '1');
                     heartFill.classList.add('beating');
+                    
+                    // Make sure the heart is visible
+                    const heartFillElement = document.getElementById('heartFill');
+                    heartFillElement.style.fill = '#ff1744';
+                    heartFillElement.style.opacity = '1';
                 }, 600);
                 
                 playMelody([
