--- a/index.html
+++ b/index.html
@@ -240,8 +240,7 @@
         .bird {
             position: absolute;
             font-size: 18px;
-            opacity: 1;
-            left: 0;
+            left: -50px;
         }
 
         .bird.flying {
@@ -250,24 +249,19 @@
 
         @keyframes flyBird {
             0% { 
-                transform: translateX(0) translateY(0);
-                opacity: 1;
+                transform: translateX(-50px) translateY(0);
             }
             25% { 
                 transform: translateX(25vw) translateY(-10px);
-                opacity: 1;
             }
             50% { 
                 transform: translateX(50vw) translateY(5px);
-                opacity: 1;
             }
             75% { 
                 transform: translateX(75vw) translateY(-5px);
-                opacity: 1;
             }
             100% { 
-                transform: translateX(100vw) translateY(0);
-                opacity: 0;
+                transform: translateX(calc(100vw + 50px)) translateY(0);
             }
         }
 
@@ -1436,7 +1430,7 @@
             }, 1500);
             
             // Step 5: Move to next stage
-            setTimeout(() => moveToStage(3), 5000);
+            setTimeout(() => moveToStage(3), 3500);
         }
 
         function endHeartPattern() {
